refactor: change lodash templating to micromustache

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chokidar": "^3.5.1",
     "got": "^11.8.2",
     "lodash": "^4.17.21",
+    "micromustache": "^8.0.3",
     "rxjs": "^6.6.7",
     "tslib": "^2.1.0",
     "yargs": "^16.2.0",
