--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "chokidar": "^3.5.1",
     "filtrex": "^2.1.0",
     "got": "^11.8.2",
+    "ink": "^3.0.8",
     "lodash": "^4.17.21",
     "micromustache": "^8.0.3",
+    "react": "^17.0.2",
     "rxjs": "^6.6.7",
     "tslib": "^2.1.0",
     "yargs": "^16.2.0",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.168",
+    "@types/react": "^17.0.3",
     "@types/yargs": "^16.0.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
