--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es2015",
     "module": "commonjs",
+    "jsx": "react-jsx",
     "declaration": true,
     "sourceMap": true,
     "outDir": "./dist",
